src/App.css
.container{
    display: flex;
    flex-direction: column;
    width: 100%;
}

.story-cards {}

.story-card {
    width: 100%;
    min-height: 36rem;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #0b0b0b;
    position: relative;
    color: white;


}

.story-card-bg {
    position: absolute;

    width: 100%;
    height: 100%;

}

.story-card-bg img {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.bg-color {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgb(0 0 0 / 40%);
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);


}

.story-card-text-container{
    position: relative;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    margin: 0 2rem;
    padding-top: 8rem;
    padding-bottom: 4rem;

}

.card-text-main-title-container {
    text-align: center;

}

.card-text-main-title {
    font-size: 1.8rem;

    font-family: "NetflixBold";
}

.card-text-subtitle{
    font-size: 1.125rem;
    font-family: "NetflixMedium";
    margin: 1rem 0 0;

}


.first-steps-container{
    margin: 1.5rem 0 0;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
}

.form-title{
    font-family: "NetflixMedium";
    font-size: 1.125rem;


}

.form-container {
    
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 80%;

    
    gap: 1rem;
    margin: 0 auto; 
    

}

.error-message-container{
    color: rgb(235, 57, 66);;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    width: 100%;    
    gap: 0.4rem;
    margin: 0 auto; 
    text-align: left;
}

.error-message-container svg {
    flex-shrink: 0;
    flex-basis: 16px;
}


.validEmail {
    display: none
}

.invalidEmail {
    display: flex
}



.input-c {
    min-height: 3rem;
}

.email-input-container{
    color: white;
    width: 100%;
    flex-grow: 1;
    /*min-width: 10rem;*/

    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    margin-top: 1.4rem;
    gap: 0.4rem;
    
}

.email-field {
    width: 100%;
    position: relative;
}



.email-label {
    position: absolute;
    left: 1rem;

    top: 50%;
    transform: translateY(-50%);
    font-size: 1.2rem;
    transition: all 0.2s;
    padding: 0 0.125rem;
    z-index: 1;
    color: rgba(255, 255, 255, 0.8);

}

.email-input {
    padding: 1.8rem 1rem 0.5rem;
    width: 100%;

    border: 1px solid rgb(109, 109, 109);
    background-color: rgba(34, 34, 34, 0.6);
    border-radius: 0.25rem;
    font-size: 1.2rem;
    outline: none;
    transition: all .3s;
    color: white;

}



.email-input:focus{
    /*border-color: rgb(197, 197, 197);*/
    background-color: rgba(0,0,0, 0.8);   

}



/* needed only if placeholder provided
.email-input::placeholder{
    font-size: 1rem;
    opacity: 0;
    transition: all .3s;
}

.email-input:focus::placeholder{
    opacity: 1;
    animation-delay: 0.2s;
}
*/

.email-input:focus+.email-label,
.email-input:valid+.email-label,
input:not(:placeholder-shown).email-input + .email-label
{
    top: 1.1rem;
    color: whitesmoke;
    font-size: 0.875rem;
}




.submit-button-container{
   
    background-color: rgb(229, 9, 20);
    width: 100%;
    min-height: 3.8rem;
    /*min-width: 8rem;*/
    flex-grow: 1;
    flex-shrink: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    color: white;
    transition-duration: 250ms;
    transition-property: background-color;
    transition-timing-function: cubic-bezier(0.9, 0, 0.51, 1);
    border-radius: 0.25rem;
    

}

.submit-button-container:hover{
    cursor: pointer;
    background-color: rgb(184, 8, 17);


}

.button-label {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-family: "NetflixMedium";
    font-size: 1.2rem;
    margin: 0.6rem;
}

.invalidEmailInput {
    border: 1px solid red;
}

header {
    position: relative;
    z-index: 1;
    display: block;
}

.separator-line {
    height: 0.5rem;
    background-color: rgb(41, 41, 41);
}

.data-container {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
}


@media (min-width: 22em){
    .submit-button-container{  
        width: 70%;       

    }

    .story-card-text-container{

    
        padding-bottom: 2rem;
    
    }


}





@media (min-width: 30em){
    .submit-button-container{
   
  
        width: 55%;

        
    
    }
    .button-label {
        font-size: 1.4rem;
    }
}

@media (min-width: 40em){
    .submit-button-container{
   
  
        width: 40%;

        
    
    }
}




@media (min-width: 50em){
    .story-card {
        min-height: 40rem;
    
    }
    .card-text-main-title {

        font-size: 2.8rem;

    
    }

    .card-text-subtitle{
        font-size: 1.4rem;
        font-family: "NetflixMedium";
        margin: 1rem 0 0;
    
    }

    .data-container {
        grid-template-columns: repeat(2, 1fr);
      }

    .form-container {
        flex-direction: row;

    }

    .email-input-container{
        flex-grow: 0;
        flex-basis: 30rem;
        width: 70%;

    }
    
    .submit-button-container{
        flex-grow: 0;
        flex-basis: 14rem;
        width: 56%;

    }

    .button-label {

        font-size: 1.7rem;
        
    }


    .validEmail {
        display: flex;
        visibility: hidden;
    }
    
    .invalidEmail {
        display: flex;
        visibility: visible;
    }


}

@media (min-width: 65em){
}


@media (min-width: 70em){
    .story-card {
        min-height: 50rem;
    
    }
    .card-text-main-title {

        font-size: 3rem;
        font-weight: 900;
    
    }

    .card-text-subtitle{
        font-size: 1.5rem;
        font-family: "NetflixMedium";
        margin: 1rem 0 0;
    
    }

    
}

@media (min-width: 80em){
    .story-card {
        min-height: 50rem;
    
    }
    
}

  /*
.data-container {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
}

header {
    position: relative;
    z-index: 1;
    display: block;
}


.story-cards {
    display: flex;
    position: relative;
    height: 50vh;
}

.test-title {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    color: white;
    width: 100%;
    height: 100%;
    z-index: 10;
    padding: 8rem;
}

.hero-title {
    position: relative;
    display: flex;
    flex-direction: column;

}

.image-bg {
    position: relative;
}

.bg-image {
    height: 100%;
    width: 100%;
    object-fit: cover;

}

.bg-color {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.40);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


.main-title {
    color: white
}






*/

/*
.main-header {
    background-color: #2e2b2b;
    background-image: url("./assets/background-f1.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;

}

.background-image-header {

    object-fit: cover;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.background-header {
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.40);

}


  
.hero {
    height: 40vh;
    color: white;
    position: relative;
    z-index: 1;
}
  
  
  @media (min-width: 50em) {

  
    .data-container {
      grid-template-columns: repeat(2, 1fr);
    }
  }
  */

